# snooty-parser

./: .drone.yml  .gitignore  CHANGELOG.md  HACKING.md  Makefile  Pipfile  README.md  README.rst  RPC-methods.md  ci.py  mypy.ini  package-lock.json  pyproject.toml  snooty.idl  snooty.spec
.github/: pull_request_template.md
.github/workflows/: release.yml  test.yml
python/: snootycli.py
python/snooty/: __init__.py  config.toml  flutter.py  icon_names.py  main.py  n.py  parser.py  performance_report.py  postprocess.py  rstparser.py  rstspec-consolidated.toml  rstspec.toml  target_database.py  test_diagnostic.py  test_main.py  test_parser.py  test_postprocess_old_and_monolithic.py  test_sharedinclude.py  test_specparser.py  util.py  util_test.py
rust/: Cargo.toml
rust/src/: lib.rs
snooty/: __init__.py  backends.py  cache.py  config.toml  diagnostics.py  download_cache.py  eventparser.py  flutter.py  icon_name_const.py  icon_names.py  intersphinx.py  language_server.py  legacy_guides.py  main.py  n.py  openapi.py  package-lock.json  page.py  page_database.py  parse_cache.py  parser.py  performance_report.py  postprocess.py  rstparser.py  rstspec-consolidated.toml  rstspec.toml  semanticparser.py  specparser.py  target_database.py  taxonomy.py  taxonomy.toml  test_backends.py  test_devhub.py  test_diagnostic.py  test_intersphinx.py  test_landing.py  test_landing_domain.py  test_language_server.py  test_legacy_guides.py  test_main.py  (+19 more)
snooty/builders/: man.py  test_man.py
snooty/gizaparser/: __init__.py  domain.py  extracts.py  nodes.py  options.py  parse.py  published_branches.py  release.py  steps.py  test_domain.py  test_extracts.py  test_nodes.py  test_options.py  test_parse.py  test_release.py  test_steps.py
snooty/tinydocutils/: README.md  __init__.py  directives.py  frontend.py  nodes.py  parsers.py  roles.py  roman.py  statemachine.py  states.py  utils.py
stubs/: bson.pyi  fett.pyi  imagesize.pyi  pytest.pyi  snooty_oxide.pyi
stubs/docopt/: __init__.pyi
stubs/docutils/: nodes.pyi  statemachine.pyi
stubs/networkx/: __init__.pyi  exception.pyi
stubs/pymongo/: __init__.pyi  collection.pyi  operations.pyi
stubs/yaml/: __init__.pyi
test_data/: extracts-test-parent.yaml  extracts-test.yaml  options-shared.yaml  options-test.yaml  release-base.yaml  release-specifications.yaml  snooty.toml  steps-test-child.yaml  steps-test-grandchild.yaml  test_quiz.rst  test_tabs.rst  test_tabs_options.rst
test_data/bad_project/: snooty.toml
test_data/driver-examples/: pythonexample.py
test_data/get-preview/: snooty.toml
test_data/guides/: test_guides.rst  test_legacy_guides.rst
test_data/merge_conflict/: index.txt  snooty.toml
test_data/test_devhub/: snooty.toml
test_data/test_intersphinx/: django.inv  ecosystem.inv  manual.inv
test_data/test_landing_domain/: snooty.toml
test_data/test_mongodb_domain/: snooty.toml
test_data/test_parser/: openapi-admin-v3.yaml  (+2 more)
tools/: .icon_names  bump_version.py  fetch-pyston.sh  get_latest_parser_url.py  icon_name_const.py  lint_changelog.py  run_pyinstaller.py  test_bump_version.py  test_lint_changelog.py
(+104 files in other folders)
