[tool.poetry]
name = "snooty"
version = "0.13.17.dev"
description = ""
authors = ["MongoDB, inc. <andrew.aldridge@mongodb.com>"]
license = "Apache-2.0"
readme = "README.rst"

[tool.poetry.dependencies]
python = ">=3.8,<3.12" # Because of PyInstaller :(
docutils = ">=0.16 <0.18"
watchdog = "^1.0"
requests = "^2.24"
tomli = "^2.0"
pyyaml = "^5.3"
python-jsonrpc-server = "^0.3.4"
fett = "^0.4.0"
networkx = ">=2.4 <3"
docopt = "^0.6.2"
pymongo = {extras = ["srv", "tls"], version = "^4.3.2"}

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
pytest-cov = "^4.0.0"
black = "^22.3.0"
pyflakes = "^2.4"
mypy = "^1.0"
pyinstaller = "^5.6"
isort = "^5.10.1"
types-requests = "^2.26.1"

[tool.poetry.scripts]
snooty = "snooty.main:main"

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.8"
mypy_path = "stubs"
strict_equality = true

[tool.pytest.ini_options]
testpaths = [
    "snooty",
    "tools",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
