[tool.poetry]
name = "snooty"
version = "0.14.9.dev"
description = ""
authors = ["MongoDB, inc. <andrew.aldridge@mongodb.com>"]
license = "Apache-2.0"
readme = "README.rst"

[tool.poetry.dependencies]
python = ">=3.8,<3.13" # Because of PyInstaller :(
watchdog = "^3.0"
requests = "^2.31"
tomli = "^2.0"
pyyaml = "6.0.1"
python-jsonrpc-server = "^0.4.0"
networkx = ">=2.4 <3"
docopt = "^0.6.2"
pymongo = "^4.5"

[tool.poetry.dev-dependencies]
pytest = "^7.4.2"
pytest-cov = "^4.1.0"
black = "^23.9.0"
pyflakes = "^3.1"
mypy = "1.5.1"
pyinstaller = "^6.0"
isort = "^5.12"
types-requests = "^2.31"

[tool.poetry.scripts]
snooty = "snooty.main:main"

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.8"
mypy_path = "stubs"
strict_equality = true

[tool.pytest.ini_options]
testpaths = [
    "snooty",
    "tools",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
