[tool.poetry]
name = "snooty"
version = "0.20.6"
description = ""
authors = ["MongoDB, inc. <andrew.aldridge@mongodb.com>"]
license = "Apache-2.0"
readme = "README.rst"

[tool.poetry.dependencies]
python = ">=3.8,<3.13" # Because of cx_freeze
requests = "^2.32"
tomli = "^2.0"
pyyaml = "6.0.1"
python-jsonrpc-server = "^0.4.0"
networkx = ">=2.4 <3"
pymongo = "^4.3.2"
docopt-ng = "^0.9.0"
imagesize = "1.4.1"
pyinstaller = "^6.4.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
pytest-cov = "^4.0.0"
black = "^24.3.0"
pyflakes = "^2.4"
mypy = "1.11.0"
isort = "^5.10.1"
types-requests = "^2.26.1"

[tool.poetry.scripts]
snooty = "snooty.main:main"

[tool.poetry.group.dev.dependencies]
types-pyinstaller = "^6.4.0.20240212"

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.8"
mypy_path = "stubs"
strict_equality = true

[tool.pytest.ini_options]
testpaths = [
    "snooty",
    "tools",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
